Implement login (also introduce txstarter interface for methods that handle transactions and move utils into services because the difference feels arbitrary)
