# api/internal/delivery/http/auth_handler.go
@@ -2,18 +2,19 @@ package http
 
 import (
 	"database/sql"
+	"frogsmash/internal/app/repos"
 	"frogsmash/internal/container"
 	"frogsmash/internal/delivery/dto"
 
 	"context"
-	"frogsmash/internal/app/repos"
 
 	"github.com/gin-gonic/gin"
 )
 
+// TODO: consider how to make this testable, *sql.DB is a concrete type
 type AuthService interface {
 	RegisterUser(username, email, password string, ctx context.Context, db repos.DBTX) error
-	Login(username, password string, ctx context.Context, db repos.DBTX) (string, error)
+	Login(username, password string, ctx context.Context, db repos.DBWithTxStarter) (string, string, error)
 	RefreshToken(refreshToken string, ctx context.Context, db repos.DBTX) (string, error)
 }
 
@@ -37,7 +38,6 @@ func NewAuthHandler(c *container.Container) *AuthHandler {
 // @Produce      json
 // @Param        user  body  dto.UserRegistrationRequest  true  "User registration payload"
 func (h *AuthHandler) Register(ctx *gin.Context) {
-	// Implementation for user registration
 	var req dto.UserRegistrationRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(400, gin.H{"error": err.Error()})
@@ -58,8 +58,26 @@ func (h *AuthHandler) Register(ctx *gin.Context) {
 // @Router       /login [post]
 // @Accept       json
 // @Produce      json
+// @Param        user  body  dto.UserLoginRequest  true  "User login payload"
+// @Success      200   {object}  dto.UserLoginResponse
 func (h *AuthHandler) Login(ctx *gin.Context) {
 	// Implementation for user login
+	var req dto.UserLoginRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(400, gin.H{"error": err.Error()})
+		return
+	}
+	jwt, refreshToken, err := h.AuthService.Login(req.Username, req.Password, ctx.Request.Context(), h.db)
+	if err != nil {
+		ctx.JSON(500, gin.H{"error": err.Error()})
+		return
+	}
+
+	res := dto.UserLoginResponse{
+		JWT:          jwt,
+		RefreshToken: refreshToken,
+	}
+	ctx.JSON(200, res)
 }
 
 // RefreshToken godoc
